--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
+
 .cabecalho {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
 }
 
 #imagemCabecalho {
     height: 10vh;
 }
 
+
 .corpoPrincipal{
     display: flex;
     justify-content: space-between;
     height: 80%;
+    margin: 0px 20px; 
+    border-left: 0.3px solid black;
+    border-right: 0.3px solid black;;
 }
-
 
 
 #listaCabecalho {
@@ -39,12 +43,14 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
-    width: 30%;
+    width: 50%;
     height: 80%;
     padding: 40px;
 }
 
 #tituloPrincipal {
+    display: flex;
+    justify-content: center;
     font-size: 25px;
 }
 
@@ -59,15 +65,135 @@
     display: flex;
     justify-content: center;
 }
-footer {
+
+#btnPrincipal {
+    display: flex;
+    align-items: center;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 17px;
+    padding: 0.8em 1.3em 0.8em 0.9em;
+    color: white;
+    background: #ad5389;
+    background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+    border: none;
+    letter-spacing: 0.05em;
+    border-radius: 16px;
+}
+   
+#btnPrincipal svg {
+    margin-right: 3px;
+    transform: rotate(30deg);
+    transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+   }
+   
+#btnPrincipal  span {
+    transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+   }
+   
+#btnPrincipal:hover svg {
+    transform: translateX(5px) rotate(90deg);
+   }
+   
+#btnPrincipal:hover span {
+    transform: translateX(7px);
+}
+
+.rodape {
     display: flex;
     justify-content: center;
+    font-weight: bold;
+    position: absolute;
+    bottom: 0;
+    left: 30%;
+    right: 30%;
+    margin: 1% 0 0 0;
+}
+
+#apodPagina {
+    background-color: #fafafa;
+    
+    color: black
+}
+
+#corpo {
+    margin: 0px 15px; 
+    border-left: 0.3px solid black;
+    border-right: 0.3px solid black;
+}
+
+.titulo {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.data {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.btn {
+    width: 200px;
+    border-radius: 10px;
+    background-color: black;
+    font-weight: bold;
+    color: #fafafa
+}
+#apodDivisoria {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    height: 70%;
+    width: 100%;
+    }
+
+.blocoDeImagem {
+    display: flex;
+    justify-content: center;
+    padding: 30px 0 0px 0px;
+    margin: 30px;
+    width: 60%;
+}
+
+#img {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    height: 100%;
+}
+
+.blocoDeExplicacao {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 60px 60px 0px 0px;
+    width: 40%;
+    
+}
+
+#paragrafoExplicacao {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#explicacao {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+
+}
+.apodRodape {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
     position: absolute;
     bottom: 1;
     left: 30%;
     right: 30%;
-    margin: 10% 0 0 0;
-}
-#img {
-    height: 20vh;
+    margin: 5% 0 0 0;
 }
