--- a/style.css
+++ b/style.css
@@ -7,7 +7,18 @@
 }
 
 #imagemCabecalho {
-    height: 10vh;
+    height: 80px;
+}
+
+li {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: black;
+    color: #fafafa;
+    height: fit-content;
+    width: 100px;
 }
 
 
@@ -28,7 +39,7 @@
 }
 .imagemDivisoria {
     height: 60%;
-    width: 50%;
+    width: 55%;
  }
 
 #imagemPrincipal {
@@ -41,9 +52,9 @@
 #textoDivisoria {
     
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: column;
-    width: 50%;
+    width: 45%;
     height: 80%;
     padding: 40px;
 }
@@ -51,13 +62,15 @@
 #tituloPrincipal {
     display: flex;
     justify-content: center;
-    font-size: 25px;
+    font-size: 30px;
+    height: 20vh;
 }
 
 #textoPrincipal {
     display: flex;
     justify-content: center;
     font-size: 20px;
+    height: 30vh;
 
 }
 
@@ -102,6 +115,7 @@
 .rodape {
     display: flex;
     justify-content: center;
+    font-size: 15px;
     font-weight: bold;
     position: absolute;
     bottom: 0;
@@ -132,6 +146,10 @@
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+
+.dataDesejada {
+    border-radius: 10px;
 }
 
 .btn {
@@ -190,10 +208,214 @@
 .apodRodape {
     display: flex;
     justify-content: center;
+    font-size: 15px;
     font-weight: bold;
     position: absolute;
     bottom: 1;
     left: 30%;
     right: 30%;
     margin: 5% 0 0 0;
+}
+
+@media screen and (max-device-width: 1200px) {
+
+    .cabecalho {
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: fit-content;
+        
+    }
+
+    /*#listaCabecalho {
+        display: flex;
+        flex-direction: column;
+        
+    }*/
+    li {
+        height: fit-content;
+    }
+
+    .corpoPrincipal{
+        display: flex;
+        flex-direction: column;
+        height: 80%;
+        width: 100%;
+        margin: 0px 0px; 
+        border-left: 0;
+        border-right: 0; 
+        
+    }
+
+    .imagemDivisoria {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 30%;
+
+    }
+
+    #imagemPrincipal {
+        width: 60%;
+        height: 50%;
+    }
+
+    #textoDivisoria {
+        display: flex;
+        justify-content: center;
+        height: 80%;
+        width: 80%;
+    }
+
+    #tituloPrincipal {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+        height: 20%;
+    }
+
+    #textoPrincipal {
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        height: 20%;
+    }
+
+    #botaoPrincipal {
+        margin: 20px 0 0 0;
+        height: 20%;
+    }
+
+    .rodape {
+        display: flex;
+        justify-content: center;
+        font-size: 15px;
+        font-weight: bold;
+        position: absolute;
+        bottom: 1;
+        
+   }
+  
+
+    #corpo {
+        margin: 0px 40px; 
+        border-left: 0;
+        border-right: 0; 
+    }
+
+    #apodDivisoria {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .blocoDeImagem {
+        display: flex;
+        justify-content: center;
+        margin: 0px;
+        width: 100%;
+        height: 40%;
+    }
+    
+    #img {
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: 80%;
+    }
+
+    .blocoDeExplicacao {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0px 0px 0px 0px;
+        width: 100%;
+        
+    }
+    
+    #paragrafoExplicacao {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 20%;
+        font-size: 25px;
+        font-weight: bold;
+    }
+    
+    #explicacao {
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        width: 100%;
+    }
+}
+
+/*@media screen and (min-width: 501px) and (max-device-width: 1200px) {
+
+    #corpo {
+        
+        height: 150vh;
+        
+        margin: 0px 0px; 
+        border-left: 0;
+        border-right: 0; 
+    }
+
+    .corpoPrincipal{
+    
+        margin: 0px 0px; 
+        border-left: 0;
+        border-right: 0; 
+        
+    }
+
+    #apodDivisoria {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .blocoDeImagem {
+        display: flex;
+        justify-content: center;
+        padding: 30px 0 0px 0px;
+        margin: 0px;
+        width: 100%;
+        height: 40%;
+    }
+    
+    #img {
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        height: 80%;
+    }
+
+    .blocoDeExplicacao {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0px 40px;
+        height: 80%;
+        width: 100%;
+        
+    }
+    
+    #paragrafoExplicacao {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        font-weight: bold;
+        font-size: 30px;
+    }
+
+    #explicacao {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+        
+        padding: 0 0px;
+        height: 20vh;
+        width: 100%;
+        
+    }
 }
